# sst-workloads

./: Makefile.am  bootstrap.sh  configure.ac
acinclude/: check_sst_core.m4  check_sst_elements.m4
skeletons/tests/sendrecv/: Makefile  main.cc  runsendrecv
